<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="ScaledInputs" Id="{19b8477b-b11f-4038-8252-32f47cdce75c}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	stJoystick : ST_Joystick;
	
	//Analog Flow/pressure
	fPS : LREAL;
	fPR : LREAL;
	fPC_B : LREAL;
	fPC_A : LREAL;
	fPW_A1 : LREAL;
	fPW_B1 : LREAL;
	fPW_A : LREAL;
	fPW_B : LREAL;
	fPW_D : LREAL;
	fQW : LREAL;
	fXc: LREAL;
	
	fEncoder : LREAL;
	
	
	
END_VAR

]]></Declaration>
  </GVL>
</TcPlcObject>